--- a/poly-commit/Cargo.toml
+++ b/poly-commit/Cargo.toml
@@ -4,8 +4,16 @@ edition.workspace = true
 version.workspace = true
 
 [dependencies]
+derive_more = { workspace = true, features = ["as_ref"] }
+p3-challenger = { workspace = true }
+p3-commit = { workspace = true }
+p3-field = { workspace = true }
+p3-matrix = { workspace = true }
+rand = { workspace = true }
+util = { path = "../util" }
 
 [dev-dependencies]
+p3-baby-bear = { workspace = true }
 
 [features]
 default = []
