--- a/poly-commit/Cargo.toml
+++ b/poly-commit/Cargo.toml
@@ -5,15 +5,11 @@ version.workspace = true
 
 [dependencies]
 derive_more = { workspace = true, features = ["as_ref"] }
-p3-challenger = { workspace = true }
-p3-commit = { workspace = true }
-p3-field = { workspace = true }
-p3-matrix = { workspace = true }
 rand = { workspace = true }
+p3 = { path = "../p3" }
 util = { path = "../util" }
 
 [dev-dependencies]
-p3-baby-bear = { workspace = true }
 
 [features]
 default = []
