--- a/poly-commit/Cargo.toml
+++ b/poly-commit/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 derive_more = { workspace = true, features = ["as_ref"] }
 rand = { workspace = true }
 p3 = { path = "../p3" }
+sumcheck = { path = "../sumcheck" }
 util = { path = "../util" }
 
 [dev-dependencies]
