--- a/p3/Cargo.toml
+++ b/p3/Cargo.toml
@@ -8,6 +8,7 @@ bincode = { workspace = true }
 p3-baby-bear = { workspace = true }
 p3-challenger = { workspace = true }
 p3-commit = { workspace = true }
+p3-dft = { workspace = true }
 p3-field = { workspace = true }
 p3-goldilocks = { workspace = true }
 p3-keccak = { workspace = true }
@@ -16,6 +17,7 @@ p3-maybe-rayon = { workspace = true, features = ["parallel"] }
 p3-merkle-tree = { workspace = true }
 p3-mersenne-31 = { workspace = true }
 p3-symmetric = { workspace = true }
+p3-util = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true }
 util = { path = "../util" }
