--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ auto_impl = "1.2.0"
 bincode = "1.3.3"
 derive_more = "1.0.0"
 itertools = "0.13.0"
+num-bigint = { version = "0.4.3", default-features = false }
 p3-baby-bear = { git = "https://github.com/plonky3/plonky3" }
 p3-challenger = { git = "https://github.com/plonky3/plonky3" }
 p3-commit = { git = "https://github.com/plonky3/plonky3" }
 p3-dft = { git = "https://github.com/plonky3/plonky3" }
 p3-field = { git = "https://github.com/plonky3/plonky3" }
+p3-field-testing = { git = "https://github.com/plonky3/plonky3" }
 p3-goldilocks = { git = "https://github.com/plonky3/plonky3" }
 p3-keccak = { git = "https://github.com/plonky3/plonky3" }
 p3-matrix = { git = "https://github.com/plonky3/plonky3" }
