--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 [workspace.dependencies]
 auto_impl = "1.2.0"
 bincode = "1.3.3"
+criterion = "0.5.1"
 derive_more = "1.0.0"
 itertools = "0.13.0"
 num-bigint = { version = "0.4.3", default-features = false }
