--- a/poly-commit/Cargo.toml
+++ b/poly-commit/Cargo.toml
@@ -6,6 +6,7 @@ version.workspace = true
 [dependencies]
 derive_more = { workspace = true, features = ["as_ref"] }
 rand = { workspace = true }
+serde = { workspace = true }
 p3 = { path = "../p3" }
 sumcheck = { path = "../sumcheck" }
 util = { path = "../util" }
